--- a/features.html
+++ b/features.html
@@ -263,3 +263,4 @@ body.custom-background { background-color: #fffcfc; }
 <div class="et_pb_column et_pb_column_1_5 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 <div class="et_pb_with_border et_pb_module et_pb_blurb et_pb_blurb_2 et_pb_bg_layout_light  et_pb_text_align_center  et_pb_blurb_position_top">
 				<div class="et_pb_blurb_content">
+					<div class="et_pb_main_blurb_image"><a href="#wallet-details"><span class="et_pb_image_wrap"><img src="						" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
