--- a/features.html
+++ b/features.html
@@ -269,7 +269,9 @@ body.custom-background { background-color: #fffcfc; }
 						<div class="et_pb_blurb_description">
 </div><!-- .et_pb_blurb_description -->
 					</div>
-				</div> <!-- .et_pb_blurb_content -->
-			</div> <!-- .et_pb_blurb -->
-			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_5 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
+				</div> 
+			</div> 
+			</div> 
+			    
+<div class="et_pb_column et_pb_column_1_5 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
 				
