--- a/features.html
+++ b/features.html
@@ -277,3 +277,6 @@ body.custom-background { background-color: #fffcfc; }
 				
 
 <div class="et_pb_with_border et_pb_module et_pb_blurb et_pb_blurb_3 et_pb_bg_layout_light  et_pb_text_align_center  et_pb_blurb_position_top">
+
+			    
+			    				<div class="et_pb_blurb_content">
