--- a/features.html
+++ b/features.html
@@ -281,3 +281,4 @@ body.custom-background { background-color: #fffcfc; }
 			    
 			    				<div class="et_pb_blurb_content">
 					<div class="et_pb_main_blurb_image"><a href="#portfolio-view"><span class="et_pb_image_wrap"><img src="					" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
+					<div class="et_pb_blurb_container">
