--- a/features.html
+++ b/features.html
@@ -275,3 +275,4 @@ body.custom-background { background-color: #fffcfc; }
 			    <div class="et_pb_with_border et_pb_module et_pb_blurb et_pb_blurb_4 et_pb_bg_layout_light  et_pb_text_align_center  et_pb_blurb_position_top">
 
 			<div class="et_pb_blurb_content">
+					<div class="et_pb_main_blurb_image"><a href="#highly-secure"><span class="et_pb_image_wrap"><img src="				" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
