--- a/features.html
+++ b/features.html
@@ -276,3 +276,4 @@ body.custom-background { background-color: #fffcfc; }
 
 			<div class="et_pb_blurb_content">
 					<div class="et_pb_main_blurb_image"><a href="#highly-secure"><span class="et_pb_image_wrap"><img src="				" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
+					<div class="et_pb_blurb_container">
