--- a/features.html
+++ b/features.html
@@ -307,7 +307,7 @@ body.custom-background { background-color: #fffcfc; }
 
 									<h2 class="p1">Wallet Management</h2>
 
-				<p class="p1">Connect your wallets to BlockKeeper and stay in control of all your holdings &amp; spendings. At the moment we are supporting Bitcoin, Litecoin, Ethereum and Dash. More crypto currencies will be added very soon. Stay in touch and sign up for product updates.<span class="Apple-converted-space">  </span><a href="../#sgnup"><span class="s1">Newsletter signup</span></a></p>
+				<p class="p1">Connect your wallets to WalletBlock and stay in control of all your holdings &amp; spendings. At the moment we are supporting Bitcoin, Litecoin, Ethereum and Dash. More crypto currencies will be added very soon. Stay in touch and sign up for product updates.<span class="Apple-converted-space">  </span><a href="../#sgnup"><span class="s1">Newsletter signup</span></a></p>
 
 				
 				
