--- a/features.html
+++ b/features.html
@@ -312,6 +312,7 @@ body.custom-background { background-color: #fffcfc; }
 								</div>
 
 							</div> <!-- .et_pb_text -->
+			</div> <!-- .et_pb_column -->
 
 				
 				
