--- a/features.html
+++ b/features.html
@@ -319,6 +319,7 @@ body.custom-background { background-color: #fffcfc; }
 					<div class="et_pb_column et_pb_column_4_4 et_pb_column_8  et_pb_css_mix_blend_mode_passthrough et-last-child">
 						<div class="et_pb_module et_pb_divider et_pb_divider_0 et_pb_divider_position_ et_pb_space"><div class="et_pb_divider_internal"></div></div>
 				</div> <!-- .et_pb_column -->
+			</div> <!-- .et_pb_row --><div id="transaction-overview" class="et_pb_row et_pb_row_4">
 
 				
 				
