--- a/features.html
+++ b/features.html
@@ -326,4 +326,5 @@ body.custom-background { background-color: #fffcfc; }
 								<div class="et_pb_module et_pb_text et_pb_text_3 et_pb_bg_layout_light  et_pb_text_align_left">
 
 								<div class="et_pb_text_inner">
+					<h2 class="p1">Transaction Overview</h2>
 
