--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    // html 
+    // html ping
     <script type="text/javascript">
         document.documentElement.className = 'js';
     </script>
