--- a/features.html
+++ b/features.html
@@ -1,6 +1,6 @@
 <html lang="en-US">
 
-<head
+<head>
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="" rel="pingback">
