--- a/features.html
+++ b/features.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 
-<body>
+<body
     // html ping
     <script type="text/javascript">
         document.documentElement.className = 'js';
