--- a/features.html
+++ b/features.html
@@ -1,36 +1,25 @@
+<!DOCTYPE html>
 <html lang="en-US">
-
 <head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <link href="" rel="pingback">
-    <title></title>
-</head>
+	<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="pingback" href="index.html" />
 
-<body>
-    // html ping
-    <script type="text/javascript">
-        document.documentElement.className = 'js';
-    </script>
-    <script>
-        var et_site_url = 'index.html';
-        var et_post_id = '47302';
+	<script type="text/javascript">
+		document.documentElement.className = 'js';
+	</script>
 
-        function et_core_page_resource_fallback(a, b) {
-            "undefined" === typeof b && (b = a.sheet.cssRules && 0 === a.sheet.cssRules.length);
-            b && (a.onerror = null, a.onload = null, a.href ? a.href = et_site_url + "/?et_core_page_resource=" + a.id + et_post_id : a.src && (a.src = et_site_url + "/?et_core_page_resource=" + a.id + et_post_id))
-        }
-    </script>
+	<script>var et_site_url='index.html';var et_post_id='47302';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
+</script><title>Features - WalletBlock</title>
 
-    <title>Features - WalletBlock</title>
-    <link rel="canonical" href="features.html" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Features - WalletBlock" />
-    <meta property="og:url" content="features.html" />
-    <meta property="og:site_name" content="WalletBlock" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Features - BlockKeeper" />
+<link rel="canonical" href="features.html" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Features - WalletBlock" />
+<meta property="og:url" content="features.html" />
+<meta property="og:site_name" content="WalletBlock" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Features - WalletBlock" /
 
     <script type='text/javascript'>
         console.log('PixelYourSite PRO version 7.0.4.1');
