--- a/features.html
+++ b/features.html
@@ -64,17 +64,15 @@ img.emoji {
 </script>
 <script type='text/javascript' src='./styles/js/plug.js'></script>
 	
-    <link rel='shortlink' href='index.html />
-<link rel="alternate" type="application/json+oembed" href="        " />
-<link rel="alternate" type="text/xml+oembed" href="    " />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /><link rel="shortcut icon" href="      .png" />
-<style type="text/css" id="custom-background-css">
+
+>
+<link rel='shortlink' href='index.html' />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /><link rel=href="./styles/img/fav.png" /><style type="text/css" id="custom-background-css">
 body.custom-background { background-color: #fffcfc; }
 </style>
+	
 
-			    <link rel="stylesheet" id="et-divi-customizer-global-cached-inline-styles" href="                                    .min.css" onerror="et_core_page_resource_fallback(this, true)" onload="et_core_page_resource_fallback(this)" /></head>
-<body data-cmplz=1 class="page-template-default page page-id-47302 custom-background et_pb_button_helper_class et_fixed_nav et_show_nav et_cover_background et_pb_gutter et_pb_gutters3 et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_pb_footer_columns4 et_header_style_left et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css">
-	<div id="page-container">
+	
 
 			<header id="main-header" data-height-onload="60">			    
                         <div class="container clearfix et_menu_container">
