--- a/features.html
+++ b/features.html
@@ -76,16 +76,17 @@ body.custom-background { background-color: #fffcfc; }
 <body data-cmplz=1 class="page-template-default page page-id-47302 custom-background et_pb_button_helper_class et_fixed_nav et_show_nav et_cover_background et_pb_gutter windows et_pb_gutters3 et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_pb_footer_columns4 et_header_style_left et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css">
 	<div id="page-container">
 	
-
-		
-		
-			<header id="main-header" data-height-onload="60">			    
-                        <div class="container clearfix et_menu_container">
-    		        <div class="logo_container">
-			<span class="logo_helper"></span>
-		        <a href="index.html">
-</a>
+<header id="main-header" data-height-onload="60">
+			<div class="container clearfix et_menu_container">
+							<div class="logo_container">
+					<span class="logo_helper"></span>
+					<a href="index.html">
+						<img src="./styles/img/logomain.jpg" alt="BlockKeeper" id="logo" data-height-percentage="30" />
+					</a>
 				</div>
+		
+		
+			
 			    	<div id="et-top-navigation" data-height="60" data-fixed-height="40">
 			<nav id="top-menu-nav">
 		<ul id="top-menu" class="nav"><li id="menu-item-47650" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-47302 current_page_item menu-item-47650">
