--- a/features.html
+++ b/features.html
@@ -97,20 +97,19 @@ body.custom-background { background-color: #fffcfc; }
 <li id="menu-item-28416" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28416"><a href="https://medium.com/">Blog</a></li>
 <li id="menu-item-28417" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28417"><a href="login.html"><span class="et_pb_more_button et_pb_button">Log In</span></a></li>
 </ul>						</nav>
-
-<div id="et_mobile_nav_menu">
-<div class="mobile_nav closed">
-<span class="select_page">Select Page</span>
-<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
-</div>
-			</div>				</div> 
-			</div> 
+	<div id="et_mobile_nav_menu">
+				<div class="mobile_nav closed">
+					<span class="select_page">Select Page</span>
+					<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
+				</div>
+			</div>				</div> <!-- #et-top-navigation -->
+			</div> <!-- .container -->
 			<div class="et_search_outer">
-     			<div class="container et_search_form_container">
-		<form role="search" method="get" class="et-search-form" action="index.html">
+				<div class="container et_search_form_container">
+					<form role="search" method="get" class="et-search-form" action="index.html">
 					<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s" title="Search for:" />					</form>
 					<span class="et_close_search_field"></span>
-</div>
+				</div>
 			</div>
 		</header> 
 			<div id="et-main-area">
