--- a/features.html
+++ b/features.html
@@ -155,11 +155,12 @@ body.custom-background { background-color: #fffcfc; }
 			
 		
 		
-		<div class="et_pb_blurb_content">
-<div class="et_pb_main_blurb_image"><a href="#wallet-management"><span class="et_pb_image_wrap"><img src="                     				" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
+				<div class="et_pb_blurb_content">
+					<div class="et_pb_main_blurb_image"><a href="#wallet-management"><span class="et_pb_image_wrap"><img src="./styles/img/walletinf.png" alt="" class="et-waypoint et_pb_animation_top" /></span></a></div>
 					<div class="et_pb_blurb_container">
-						<h4 class="et_pb_module_header"><a href="#wallet-management">Wallet Management</a></h4>
+						<h4 class="et_pb_module_header"><a href="#wallet-management">Wallet Infrastructure</a></h4>
 						<div class="et_pb_blurb_description">
+							
 
 			    </div><!-- .et_pb_blurb_description -->
 					</div>
