--- a/features.html
+++ b/features.html
@@ -452,6 +452,7 @@ body.custom-background { background-color: #fffcfc; }
 		
 				<div id="et-footer-nav">
 					<div class="container">
+							<ul id="menu-footer" class="bottom-nav"><li id="menu-item-47870" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47870"><a href="terms.html">Terms</a></li>
 						<ul id="menu-footer" class="bottom-nav"><li id="menu-item-47870" class="contact.html">Contact</a></li>
 <li id="menu-item-50045" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50045"><a href="cookie.html">Cookie policy</a></li>
 </ul>					</div>
