--- a/privacy-security.html
+++ b/privacy-security.html
@@ -10,3 +10,5 @@
 	
 	<script>var et_site_url='index.html';var et_post_id='47463';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
 </script><title>Privacy &amp; Security - WalletBlock</title>
+
+	<link rel="canonical" href="privacy-security.html" />
