--- a/privacy-security.html
+++ b/privacy-security.html
@@ -12,3 +12,6 @@
 </script><title>Privacy &amp; Security - WalletBlock</title>
 
 	<link rel="canonical" href="privacy-security.html" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Privacy &amp; Security - BlockKeeper" />
