--- a/privacy-security.html
+++ b/privacy-security.html
@@ -15,3 +15,4 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Privacy &amp; Security - BlockKeeper" />
+<meta property="og:url" content="privacy-security.html" />
