--- a/privacy-security.html
+++ b/privacy-security.html
@@ -16,3 +16,4 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Privacy &amp; Security - BlockKeeper" />
 <meta property="og:url" content="privacy-security.html" />
+<meta property="og:site_name" content="WalletBlock" />
