--- a/privacy-security.html
+++ b/privacy-security.html
@@ -17,3 +17,4 @@
 <meta property="og:title" content="Privacy &amp; Security - BlockKeeper" />
 <meta property="og:url" content="privacy-security.html" />
 <meta property="og:site_name" content="WalletBlock" />
+<meta name="twitter:card" content="summary_large_image" />
