--- a/privacy-security.html
+++ b/privacy-security.html
@@ -18,3 +18,4 @@
 <meta property="og:url" content="privacy-security.html" />
 <meta property="og:site_name" content="WalletBlock" />
 <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Privacy &amp; Security - WalletBlock" />
