--- a/privacy-security.html
+++ b/privacy-security.html
@@ -37,3 +37,10 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
+	<link rel='stylesheet' id='wp-block-library-css'  href='./styles/css/styles1.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='chld_thm_cfg_parent-css'  href='./styles/css/styles2.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='divi-style-css'  href='./styles/css/styles3.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='et-builder-googlefonts-cached-css'  href='./styles/css/fonts.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='dashicons-css'  href='./styles/css/dash.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='sb_dcl_custom_css-css'  href='./styles/css/custom.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='cmplz-cookie-css'  href='./styles/css/cookie.css' type='text/css' media='all' />
