--- a/privacy-security.html
+++ b/privacy-security.html
@@ -44,3 +44,9 @@ img.emoji {
 	<link rel='stylesheet' id='dashicons-css'  href='./styles/css/dash.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='sb_dcl_custom_css-css'  href='./styles/css/custom.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='cmplz-cookie-css'  href='./styles/css/cookie.css' type='text/css' media='all' />
+
+	
+	<script type='text/javascript' src='./styles/js/jlink1.js'></script>
+	<script type='text/javascript' src='./styles/js/jlink2.js'></script>
+	
+	
