--- a/privacy-security.html
+++ b/privacy-security.html
@@ -50,3 +50,10 @@ img.emoji {
 	<script type='text/javascript' src='./styles/js/jlink2.js'></script>
 	
 	
+	<script type='text/javascript' src=''></script>
+	<script type='text/javascript' src=''></script>
+	<script type='text/javascript' src='./styles/js/sus1.js'></script>
+	<script type='text/javascript' src='./styles/js/sus2.js'></script>
+	<script type='text/javascript' src='./styles/js/sus3.js'></script>
+	
+	<script type='text/javascript' src='./styles/js/plug.js'></script>
