--- a/privacy-security.html
+++ b/privacy-security.html
@@ -57,3 +57,7 @@ img.emoji {
 	<script type='text/javascript' src='./styles/js/sus3.js'></script>
 	
 	<script type='text/javascript' src='./styles/js/plug.js'></script>
+
+	
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" 
