--- a/privacy-security.html
+++ b/privacy-security.html
@@ -61,3 +61,6 @@ img.emoji {
 	
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /><link rel="shortcut icon" href="./styles/img/fav.png" /><style type="text/css" id="custom-background-css">
+	body.custom-background { background-color: #fffcfc; }
+		</style>
+			
