--- a/privacy-security.html
+++ b/privacy-security.html
@@ -68,3 +68,7 @@ img.emoji {
 <link rel="stylesheet" id="et-divi-customizer-global-cached-inline-styles" href="./styles/css/afterend.css" onerror="et_core_page_resource_fallback(this, true)" onload="et_core_page_resource_fallback(this)" /></head>
 <body data-cmplz=1 class="page-template-default page page-id-47463 custom-background et_pb_button_helper_class et_fixed_nav et_show_nav et_cover_background et_pb_gutter linux et_pb_gutters3 et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_pb_footer_columns4 et_header_style_left et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css">
 	<div id="page-container">
+
+		
+	
+			<header id="main-header" data-height-onload="60">
