--- a/privacy-security.html
+++ b/privacy-security.html
@@ -74,3 +74,5 @@ img.emoji {
 			<header id="main-header" data-height-onload="60">
 <div class="container clearfix et_menu_container">
 							<div class="logo_container">
+	<span class="logo_helper"></span>
+					<a href="index.html">
