--- a/privacy-security.html
+++ b/privacy-security.html
@@ -76,3 +76,6 @@ img.emoji {
 							<div class="logo_container">
 	<span class="logo_helper"></span>
 					<a href="index.html">
+	<img src="./styles/img/logomain.jpg" alt="BlockKeeper" id="logo" data-height-percentage="30" />
+					</a>
+				</div>
