--- a/privacy-security.html
+++ b/privacy-security.html
@@ -79,3 +79,6 @@ img.emoji {
 	<img src="./styles/img/logomain.jpg" alt="BlockKeeper" id="logo" data-height-percentage="30" />
 					</a>
 				</div>
+
+		<div id="et-top-navigation" data-height="60" data-fixed-height="40">
+											<nav id="top-menu-nav">
