--- a/privacy-security.html
+++ b/privacy-security.html
@@ -72,13 +72,18 @@ img.emoji {
 		
 	
 			<header id="main-header" data-height-onload="60">
-<div class="container clearfix et_menu_container">
-							<div class="logo_container">
-	<span class="logo_helper"></span>
+                       <div class="container clearfix et_menu_container">
+			<div class="logo_container">
+	                     <span class="logo_helper"></span>
 					<a href="index.html">
 	<img src="./styles/img/logomain.jpg" alt="BlockKeeper" id="logo" data-height-percentage="30" />
-					</a>
+			        </a>
 				</div>
 
+	
+	
+	
 		<div id="et-top-navigation" data-height="60" data-fixed-height="40">
-											<nav id="top-menu-nav">
+			<nav id="top-menu-nav">
+	<ul id="top-menu" class="nav"><li id="menu-item-47650" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47650"><a href="./features.html">Features</a></li>
+
