--- a/privacy-security.html
+++ b/privacy-security.html
@@ -86,4 +86,5 @@ img.emoji {
 		<div id="et-top-navigation" data-height="60" data-fixed-height="40">
 			<nav id="top-menu-nav">
 	<ul id="top-menu" class="nav"><li id="menu-item-47650" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47650"><a href="./features.html">Features</a></li>
+<li id="menu-item-47647" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-47463 current_page_item menu-item-47647"><a href="./privacy-security.html" aria-current="page">Privacy &#038; Security</a></li>
 
