--- a/privacy-security.html
+++ b/privacy-security.html
@@ -89,4 +89,5 @@ img.emoji {
 <li id="menu-item-47647" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-47463 current_page_item menu-item-47647"><a href="./privacy-security.html" aria-current="page">Privacy &#038; Security</a></li>
 <li id="menu-item-47646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47646"><a href="./faqs.html">FAQs</a></li>
 <li id="menu-item-50000" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50000"><a href="./install.html">Install</a></li>
+<li id="menu-item-28416" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28416"><a href="			">Blog</a></li>
 
