--- a/privacy-security.html
+++ b/privacy-security.html
@@ -93,3 +93,9 @@ img.emoji {
 <li id="menu-item-28417" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28417"><a href="./login.html"><span class="et_pb_more_button et_pb_button">Log In</span></a></li>
 </ul>						</nav>
 
+
+				<div id="et_mobile_nav_menu">
+				<div class="mobile_nav closed">
+					<span class="select_page">Select Page</span>
+					<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
+				</div>
