--- a/privacy-security.html
+++ b/privacy-security.html
@@ -99,3 +99,7 @@ img.emoji {
 					<span class="select_page">Select Page</span>
 					<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
 				</div>
+</div>				</div> <!-- #et-top-navigation -->
+			</div> <!-- .container -->
+			<div class="et_search_outer">
+				<div class="container et_search_form_container">
