--- a/privacy-security.html
+++ b/privacy-security.html
@@ -101,5 +101,13 @@ img.emoji {
 				</div>
 </div>				</div> <!-- #et-top-navigation -->
 			</div> <!-- .container -->
-			<div class="et_search_outer">
+	<div class="et_search_outer">
 				<div class="container et_search_form_container">
+					<form role="search" method="get" class="et-search-form" action="index.html">
+					<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s" title="Search for:" />					</form>
+					<span class="et_close_search_field"></span>
+				</div>
+			</div>
+		</header> <!-- #main-header -->
+			<div id="et-main-area">
+	
