--- a/privacy-security.html
+++ b/privacy-security.html
@@ -197,4 +197,5 @@ img.emoji {
 					</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 		
 				
-				
+								<div class="et_pb_module et_pb_image et_pb_image_2">
+
