--- a/privacy-security.html
+++ b/privacy-security.html
@@ -199,3 +199,4 @@ img.emoji {
 				
 								<div class="et_pb_module et_pb_image et_pb_image_2">
 
+				<span class="et_pb_image_wrap "><img src="					" alt="" /></span>
