--- a/privacy-security.html
+++ b/privacy-security.html
@@ -207,3 +207,5 @@ img.emoji {
 						
 										<div class="et_pb_text_inner">
 					<p class="p1" style="text-align: justify;">								</p>
+</div>
+			</div> <!-- .et_pb_text -->
