--- a/privacy-security.html
+++ b/privacy-security.html
@@ -209,3 +209,4 @@ img.emoji {
 					<p class="p1" style="text-align: justify;">								</p>
 </div>
 			</div> <!-- .et_pb_text -->
+			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_4 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
