--- a/privacy-security.html
+++ b/privacy-security.html
@@ -214,3 +214,4 @@ img.emoji {
 						<div class="et_pb_module et_pb_image et_pb_image_3">
 				<span class="et_pb_image_wrap "><img src="			" alt="" /></span>
 			</div><div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light  et_pb_text_align_left">
+				<div class="et_pb_text_inner">
