--- a/privacy-security.html
+++ b/privacy-security.html
@@ -215,3 +215,8 @@ img.emoji {
 				<span class="et_pb_image_wrap "><img src="			" alt="" /></span>
 			</div><div class="et_pb_module et_pb_text et_pb_text_4 et_pb_bg_layout_light  et_pb_text_align_left">
 				<div class="et_pb_text_inner">
+	<p class="p1" style="text-align: justify;">					 <a href="" target="_blank" rel="noopener"><span class="s2">Github</span></a>.</p>
+				</div>
+			</div> <!-- .et_pb_text -->
+			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough et-last-child">
+				
