--- a/privacy-security.html
+++ b/privacy-security.html
@@ -226,3 +226,6 @@ img.emoji {
 			</div><div class="et_pb_module et_pb_text et_pb_text_5 et_pb_bg_layout_light  et_pb_text_align_left">
 				<div class="et_pb_text_inner">
 					<p class="p2" style="text-align: justify;">The application backend is on your device and communicates with several <strong>blockchain explorers</strong> directly.</p>
+	</div>
+			</div> <!-- .et_pb_text -->
+			</div> <!-- .et_pb_column -->
