--- a/privacy-security.html
+++ b/privacy-security.html
@@ -231,3 +231,4 @@ img.emoji {
 			</div> <!-- .et_pb_column -->
 
 									</div> <!-- .et_pb_row -->
+			</div> <!-- .et_pb_section --><div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
