--- a/privacy-security.html
+++ b/privacy-security.html
@@ -232,3 +232,5 @@ img.emoji {
 
 									</div> <!-- .et_pb_row -->
 			</div> <!-- .et_pb_section --><div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
+
+									<div class="et_pb_row et_pb_row_3">
