--- a/privacy-security.html
+++ b/privacy-security.html
@@ -235,3 +235,4 @@ img.emoji {
 
 									<div class="et_pb_row et_pb_row_3">
 				<div class="et_pb_column et_pb_column_4_4 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough et-last-child">
+				<div class="et_pb_module et_pb_image et_pb_image_5">
