--- a/privacy-security.html
+++ b/privacy-security.html
@@ -241,3 +241,4 @@ img.emoji {
 									<span class="et_pb_image_wrap "><img src="			" alt="" /></span>
 			</div><div class="et_pb_module et_pb_text et_pb_text_6 et_pb_bg_layout_light  et_pb_text_align_center">
 				<div class="et_pb_text_inner">
+					<h3>We do <strong>NOT</strong> store nor control your crypto assets or<strong> private keys</strong>!</h3>
