--- a/privacy-security.html
+++ b/privacy-security.html
@@ -242,3 +242,6 @@ img.emoji {
 			</div><div class="et_pb_module et_pb_text et_pb_text_6 et_pb_bg_layout_light  et_pb_text_align_center">
 				<div class="et_pb_text_inner">
 					<h3>We do <strong>NOT</strong> store nor control your crypto assets or<strong> private keys</strong>!</h3>
+	</div>
+			</div> <!-- .et_pb_text --><div class="et_pb_module et_pb_text et_pb_text_7 et_pb_bg_layout_light  et_pb_text_align_center">
+				
