--- a/privacy-security.html
+++ b/privacy-security.html
@@ -245,4 +245,5 @@ img.emoji {
 	</div>
 			</div> <!-- .et_pb_text --><div class="et_pb_module et_pb_text et_pb_text_7 et_pb_bg_layout_light  et_pb_text_align_center">
 						<div class="et_pb_text_inner">
-		
+							<p>WalletBlock only needs your address or extended <strong>public key</strong>. Our <em>watch only wallet</em> never knows or asks for your private key.</p>
+
