--- a/privacy-security.html
+++ b/privacy-security.html
@@ -251,3 +251,6 @@ img.emoji {
 			</div> <!-- .et_pb_column -->
 							</div> <!-- .et_pb_row -->
 
+
+			</div> <!-- .et_pb_section --><div class="et_pb_section et_pb_section_3 et_section_regular">
+				
