--- a/privacy-security.html
+++ b/privacy-security.html
@@ -253,4 +253,5 @@ img.emoji {
 
 
 			</div> <!-- .et_pb_section --><div class="et_pb_section et_pb_section_3 et_section_regular">
-				
+							<div class="et_pb_row et_pb_row_4">
+		
