--- a/privacy-security.html
+++ b/privacy-security.html
@@ -255,3 +255,4 @@ img.emoji {
 			</div> <!-- .et_pb_section --><div class="et_pb_section et_pb_section_3 et_section_regular">
 							<div class="et_pb_row et_pb_row_4">
 		
+				<div class="et_pb_column et_pb_column_1_2 et_pb_column_7  et_pb_css_mix_blend_mode_passthrough">
