--- a/privacy-security.html
+++ b/privacy-security.html
@@ -257,3 +257,5 @@ img.emoji {
 		
 				<div class="et_pb_column et_pb_column_1_2 et_pb_column_7  et_pb_css_mix_blend_mode_passthrough">
 				<div class="et_pb_module et_pb_text et_pb_text_8 et_pb_bg_layout_light  et_pb_text_align_justified">
+
+									<div class="et_pb_text_inner">
