--- a/privacy-security.html
+++ b/privacy-security.html
@@ -259,3 +259,4 @@ img.emoji {
 				<div class="et_pb_module et_pb_text et_pb_text_8 et_pb_bg_layout_light  et_pb_text_align_justified">
 
 									<div class="et_pb_text_inner">
+					<h5 class="p1"><span class="s1">Watch Only Wallet</span></h5>
