--- a/privacy-security.html
+++ b/privacy-security.html
@@ -260,3 +260,4 @@ img.emoji {
 
 									<div class="et_pb_text_inner">
 					<h5 class="p1"><span class="s1">Watch Only Wallet</span></h5>
+<p class="p1">Watch only wallet means there is no need for you to enter your private keys in order to track your wallet activities. We enable you to watch your assets and transactions live on the blockchains, whenever you want and without the need of using your actual wallet, which stores your private keys. Connecting your wallet to WalletBlock is very easy: you just need your wallet&#8217;s address or extended public key to import all related transaction data. The beauty of WalletBlock is that you can enrich the imported transactions with personal notes and meta data which only you have access to. NEVER enter your private keys!</p>
