--- a/privacy-security.html
+++ b/privacy-security.html
@@ -267,3 +267,5 @@ img.emoji {
 				
 				<div class="et_pb_module et_pb_text et_pb_text_9 et_pb_bg_layout_light  et_pb_text_align_justified">
 				<div class="et_pb_text_inner">
+
+										<h5 class="p1"><span class="s1">High Anonymity</span></h5>
