--- a/privacy-security.html
+++ b/privacy-security.html
@@ -270,3 +270,7 @@ img.emoji {
 
 										<h5 class="p1"><span class="s1">High Anonymity</span></h5>
 <p class="p1">There is no tracking nor logging of personal identifiable information with WalletBlock. It is not required to enter any personal information in order to create an account. Due to our encryption methods, it is not possible for us nor any other party to access your addresses or read your sensitive notes. In order to keep your privacy as high as possible, there aren&#8217;t any advertisements and no other third party scripts running in the WalletBlock web app. Wallet addresses and transaction data are directly requested from your device with no need to go through our servers.</p>
+	</div>
+			</div> <!-- .et_pb_text -->
+			</div> <!-- .et_pb_column -->
+				
