--- a/privacy-security.html
+++ b/privacy-security.html
@@ -274,3 +274,4 @@ img.emoji {
 			</div> <!-- .et_pb_text -->
 			</div> <!-- .et_pb_column -->
 				
+			</div> <!-- .et_pb_row --><div class="et_pb_row et_pb_row_5">
