--- a/privacy-security.html
+++ b/privacy-security.html
@@ -275,3 +275,4 @@ img.emoji {
 			</div> <!-- .et_pb_column -->
 				
 			</div> <!-- .et_pb_row --><div class="et_pb_row et_pb_row_5">
+				<div class="et_pb_column et_pb_column_1_2 et_pb_column_9  et_pb_css_mix_blend_mode_passthrough">
