--- a/privacy-security.html
+++ b/privacy-security.html
@@ -277,3 +277,5 @@ img.emoji {
 			</div> <!-- .et_pb_row --><div class="et_pb_row et_pb_row_5">
 				<div class="et_pb_column et_pb_column_1_2 et_pb_column_9  et_pb_css_mix_blend_mode_passthrough">
 				<div class="et_pb_module et_pb_text et_pb_text_10 et_pb_bg_layout_light  et_pb_text_align_justified">
+
+									<div class="et_pb_text_inner">
