--- a/privacy-security.html
+++ b/privacy-security.html
@@ -279,3 +279,4 @@ img.emoji {
 				<div class="et_pb_module et_pb_text et_pb_text_10 et_pb_bg_layout_light  et_pb_text_align_justified">
 
 									<div class="et_pb_text_inner">
+					<h5 class="p1"><span class="s1">Client-side Encryption</span></h5>
