--- a/privacy-security.html
+++ b/privacy-security.html
@@ -280,3 +280,4 @@ img.emoji {
 
 									<div class="et_pb_text_inner">
 					<h5 class="p1"><span class="s1">Client-side Encryption</span></h5>
+<p class="p2">Your public key and private transaction data is encrypted on your device with an unique generated identifier and crypto-key. Your identifier acts as your personal authentification token and your crypto-key acts as your encryption and decryption key to lock and unlock your data on your local device. Your public keys, addresses, transaction data and sensitive meta data can never be accessed without your crypto-key. If you lose your crypto-key, you lose access to all your aggregated and enriched wallet and transaction data. In this case there is no way to get any information back nor restored. Therefore, NEVER lose your identifier or crypto-key.</p>
