--- a/features.html
+++ b/features.html
@@ -27,10 +27,10 @@
 				
 				<div class="et_pb_text_inner">
 					<h2 class="p1">Asset Management</h2>
-<p class="p1">Connect your wallets to WalletBlock and stay in control of all your holdings &amp; spendings. Currently we have support for Bitcoin, Litecoin, Ethereum and Dash. We plan on adding more digital assets very soon. Stay in touch and sign up for product updates.<span class="Apple-converted-space">  </span></p>
+<p class="p1">Connect your wallets to WalletBlock and control all your holdings &amp; spendings. Currently we have support for Bitcoin, Litecoin, Ethereum and Dash. We plan on adding more digital assets very soon. Stay in touch and sign up for product updates.<span class="Apple-converted-space">  </span></p>
 				</div>
 			</div> <!-- .et_pb_text -->
-			</div> <!-- .et_pb_column -->tBlock</title>
+			</div> <!-- .et_pb_column -->WalletBlock</title>
 
 <link rel="canonical" href="features.html" />
 <meta property="og:locale" content="en_US" />
