--- a/features.html
+++ b/features.html
@@ -10,7 +10,7 @@
 	</script>
 
 	<script>var et_site_url='index.html';var et_post_id='47302';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
-</script><title>Features - Walle		<div id="wallet-management" class="et_pb_row et_pb_row_2">
+</script><title>Features - WalletBlock		<div id="wallet-management" class="et_pb_row et_pb_row_2">
 				<div class="et_pb_column et_pb_column_1_2 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough">
 				
 				
