--- a/privacy-security.html
+++ b/privacy-security.html
@@ -286,5 +286,6 @@ img.emoji {
 
 										</div>
 			</div> <!-- .et_pb_text --><div class="et_pb_module et_pb_image et_pb_image_6">
-				
+						<span class="et_pb_image_wrap "><img src="				" alt="" /></span>
+		
 				
