--- a/privacy-security.html
+++ b/privacy-security.html
@@ -287,5 +287,7 @@ img.emoji {
 										</div>
 			</div> <!-- .et_pb_text --><div class="et_pb_module et_pb_image et_pb_image_6">
 						<span class="et_pb_image_wrap "><img src="				" alt="" /></span>
-		
+		</div>
+			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_2 et_pb_column_10  et_pb_css_mix_blend_mode_passthrough et-last-child">
+				
 				
