--- a/privacy-security.html
+++ b/privacy-security.html
@@ -291,3 +291,4 @@ img.emoji {
 			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_2 et_pb_column_10  et_pb_css_mix_blend_mode_passthrough et-last-child">
 				
 				
+				<div class="et_pb_module et_pb_text et_pb_text_11 et_pb_bg_layout_light  et_pb_text_align_justified">
