--- a/privacy-security.html
+++ b/privacy-security.html
@@ -292,3 +292,4 @@ img.emoji {
 				
 				
 				<div class="et_pb_module et_pb_text et_pb_text_11 et_pb_bg_layout_light  et_pb_text_align_justified">
+				<div class="et_pb_text_inner">
