--- a/privacy-security.html
+++ b/privacy-security.html
@@ -296,3 +296,4 @@ img.emoji {
 
 					
 										<h5 class="p1"><span class="s1">Secured Management</span></h5>
+<p class="p2">Your extended public keys are never exposed to any blockchain explorer in order to receive your wallet&#8217;s funds and transaction data. The derivation of the possible wallet addresses takes place on your local device. Only data from separated addresses are requested from the blockchain explorer directly by your device. In order to paint the big picture of your wallet, the transaction data of all your wallet&#8217;s possible addresses is assembled on your local device only. WalletBlock never handles any decrypted address data, nor is the WalletBlock server able to request transaction data from a blockchain explorer in behalf of you. Data decryption is happening to 100% on your device.</p>
