--- a/privacy-security.html
+++ b/privacy-security.html
@@ -317,3 +317,11 @@ img.emoji {
 				</article>
 
 			
+</div>
+
+
+	<span class="et_pb_scroll_top et-pb-icon"></span>
+
+
+			<footer id="main-footer">
+				
