--- a/privacy-security.html
+++ b/privacy-security.html
@@ -327,3 +327,4 @@ img.emoji {
 				
 <div id="et-footer-nav">
 					<div class="container">
+						<ul id="menu-footer" class="bottom-nav"><li id="menu-item-47870" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47870"><a href="terms.html">Terms</a></li>
