--- a/privacy-security.html
+++ b/privacy-security.html
@@ -329,3 +329,4 @@ img.emoji {
 					<div class="container">
 						<ul id="menu-footer" class="bottom-nav"><li id="menu-item-47870" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47870"><a href="terms.html">Terms</a></li>
 <li id="menu-item-47871" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47871"><a href="contact.html">Contact</a></li>
+<li id="menu-item-50045" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50045"><a href="cookie.html">Cookie policy</a></li>
