--- a/privacy-security.html
+++ b/privacy-security.html
@@ -332,3 +332,4 @@ img.emoji {
 <li id="menu-item-50045" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50045"><a href="cookie.html">Cookie policy</a></li>
 </ul>					</div>
 				</div> <!-- #et-footer-nav -->
+	<div id="footer-bottom">
