--- a/privacy-security.html
+++ b/privacy-security.html
@@ -333,3 +333,4 @@ img.emoji {
 </ul>					</div>
 				</div> <!-- #et-footer-nav -->
 	<div id="footer-bottom">
+					<div class="container clearfix">
