--- a/privacy-security.html
+++ b/privacy-security.html
@@ -334,3 +334,7 @@ img.emoji {
 				</div> <!-- #et-footer-nav -->
 	<div id="footer-bottom">
 					<div class="container clearfix">
+				</div>	
+				</div>
+			</footer>
+		</div>
