--- a/privacy-security.html
+++ b/privacy-security.html
@@ -341,3 +341,5 @@ img.emoji {
 	</div> <!-- #page-container -->
 
 		<script type="text/javascript">
+
+<script type='text/javascript' src='			'></script>
