--- a/privacy-security.html
+++ b/privacy-security.html
@@ -343,3 +343,4 @@ img.emoji {
 		<script type="text/javascript">
 
 <script type='text/javascript' src='			'></script>
+<script type='text/javascript' src='			'></script>
