--- a/privacy-security.html
+++ b/privacy-security.html
@@ -342,5 +342,6 @@ img.emoji {
 
 		<script type="text/javascript">
 
+<script type='text/javascript' src='			'	></script>
 <script type='text/javascript' src='			'></script>
 <script type='text/javascript' src='			'></script>
