--- a/privacy-security.html
+++ b/privacy-security.html
@@ -345,3 +345,4 @@ img.emoji {
 <script type='text/javascript' src='			'	></script>
 <script type='text/javascript' src='			'></script>
 <script type='text/javascript' src='			'></script>
+<script type='text/javascript'>
