--- a/privacy-security.html
+++ b/privacy-security.html
@@ -346,3 +346,4 @@ img.emoji {
 <script type='text/javascript' src='			'></script>
 <script type='text/javascript' src='			'></script>
 <script type='text/javascript'>
+</script>
