--- a/privacy-security.html
+++ b/privacy-security.html
@@ -348,3 +348,4 @@ img.emoji {
 <script type='text/javascript'>
 </script>
 <script type='text/javascript' src='			'></script>
+<script type='text/javascript' src='			'></script>
