--- a/faqs.html
+++ b/faqs.html
@@ -1,3 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="pingback" href="index.html" />
