--- a/faqs.html
+++ b/faqs.html
@@ -4,3 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="pingback" href="index.html" />
+
+	<script type="text/javascript">
+		document.documentElement.className = 'js';
+	</script>
