--- a/faqs.html
+++ b/faqs.html
@@ -11,3 +11,8 @@
 <script>var et_site_url='index.html';var et_post_id='47488';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
 </script><title>FAQs - WalletBlock</title>
 <link rel="canonical" href="faqs.html" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="FAQs - WalletBlock" />
+<meta property="og:url" content="faqs.html" />
+<meta property="og:site_name" content="WalletBlock" />
